@@ -1,3 +1,9 @@
+2005-12-08  Dan Williams  <dcbw@redhat.com>
+
+	* gconf/gconf.c: (gconf_unescape_string): Don't stomp on
+	  the function-level scoped 'end' from deep in the function.
+	  Fixes a segfault.
+
 2005-11-11  Dinoop Thomas  <dinoop.thomas@wipro.com>
 	
 	* gconf/gconf.c: (gconf_debug_shutdown): Corrected documentation.
